// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KPICard Component > renders with integer value correctly 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm border border-gray-100 dark:border-gray-700 relative overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:shadow-neutral-200/50 dark:hover:shadow-neutral-900/50 hover:-translate-y-0.5 hover:border-neutral-200 dark:hover:border-neutral-600"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-sm font-medium text-gray-500 dark:text-gray-400"
        >
          交易次数
        </p>
        <p
          class="mt-2 text-3xl font-bold truncate transition-colors duration-200 text-gray-900 dark:text-white"
        >
          150
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with negative value correctly 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm border border-gray-100 dark:border-gray-700 relative overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:shadow-neutral-200/50 dark:hover:shadow-neutral-900/50 hover:-translate-y-0.5 hover:border-neutral-200 dark:hover:border-neutral-600"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-sm font-medium text-gray-500 dark:text-gray-400"
        >
          今日盈亏
        </p>
        <p
          class="mt-2 text-3xl font-bold truncate transition-colors duration-200 text-loss"
        >
          -$1,234.56
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with percentage value correctly 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm border border-gray-100 dark:border-gray-700 relative overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:shadow-neutral-200/50 dark:hover:shadow-neutral-900/50 hover:-translate-y-0.5 hover:border-neutral-200 dark:hover:border-neutral-600"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-sm font-medium text-gray-500 dark:text-gray-400"
        >
          胜率
        </p>
        <p
          class="mt-2 text-3xl font-bold truncate transition-colors duration-200 text-gray-900 dark:text-white"
        >
          68.5%
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with positive value correctly 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm border border-gray-100 dark:border-gray-700 relative overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:shadow-neutral-200/50 dark:hover:shadow-neutral-900/50 hover:-translate-y-0.5 hover:border-neutral-200 dark:hover:border-neutral-600"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-sm font-medium text-gray-500 dark:text-gray-400"
        >
          总盈亏
        </p>
        <p
          class="mt-2 text-3xl font-bold truncate transition-colors duration-200 text-profit"
        >
          $12,345.67
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with subtitle correctly 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm border border-gray-100 dark:border-gray-700 relative overflow-hidden transition-all duration-300 ease-out hover:shadow-lg hover:shadow-neutral-200/50 dark:hover:shadow-neutral-900/50 hover:-translate-y-0.5 hover:border-neutral-200 dark:hover:border-neutral-600"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-sm font-medium text-gray-500 dark:text-gray-400"
        >
          加载中
        </p>
        <p
          class="mt-2 text-3xl font-bold truncate transition-colors duration-200 text-gray-900 dark:text-white"
        >
          --
        </p>
        <p
          class="mt-1 text-sm text-gray-500 dark:text-gray-400 truncate"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</div>
`;
